--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -1,147 +1,146 @@
 .project {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 15px;
-    border-bottom: 1px solid #cc8b65;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 15px;
+}
+
+.show {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.project-info,
+.project-tools,
+.project-links {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 50px;
+}
+
+.project-tools .head,
+.project-info .head,
+.project-links .head {
+  font-size: 25px;
+  color: #cc8b65;
+}
+
+.project-info .des,
+.project-tools .des {
+  width: 45%;
+  font-size: 20px;
+  color: #fff;
+}
+
+.project h1 {
+  color: #cc8b65;
+  font-size: 35px;
+}
+
+.project img {
+  width: 1000px;
+  height: 400px;
+  border-radius: 10px;
+}
+
+.project h2 {
+  font-size: 40px;
+  color: #3e497a;
+}
+
+.project p {
+  font-size: 40px;
+  color: #3e497a;
+  margin-top: 0px;
+}
+
+.project svg {
+  font-size: 60px;
+  color: #3e497a;
+}
+
+@media only screen and (max-width: 1300px) {
+  .projectList {
+    grid-template-columns: 1fr 1fr;
   }
-  
-  .show {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
-  
-  .project-info,
-  .project-tools {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin-bottom: 50px;
-  }
-  
-  .project-tools .head,
-  .project-info .head {
-    font-size: 25px;
-    color: #cc8b65;
-  }
-  
-  .project-info .des,
-  .project-tools .des {
-    width: 45%;
-    font-size: 20px;
-    color: #fff;
-  }
-  
-  .project h1 {
-    color: #cc8b65;
-    font-size: 35px;
+}
+
+@media only screen and (max-width: 800px) {
+  .projectList {
+    grid-template-columns: 1fr;
   }
   .project img {
-    width: 1000px;
-    height: 400px;
-    border-radius: 10px;
+    width: 90%;
   }
-  
+}
+
+@media only screen and (max-width: 600px) {
+  .projectList {
+    width: 100%;
+  }
+  .projectItem {
+    width: 300px;
+    height: 300px;
+  }
+  .project img {
+    width: 500px;
+  }
+  .project h1,
   .project h2 {
-    font-size: 40px;
-    color: #3e497a;
+    font-size: 35px;
   }
-  
   .project p {
-    font-size: 40px;
-    color: #3e497a;
-    margin-top: 0px;
+    font-size: 32px;
   }
-  
-  .project svg {
-    font-size: 60px;
-    color: #3e497a;
+}
+
+@media only screen and (max-width: 450px) {
+  .project img {
+    width: 85%;
   }
-  
-  @media only screen and (max-width: 1300px) {
-    .projectList {
-      grid-template-columns: 1fr 1fr;
-    }
+  .project h1,
+  .project h2 {
+    font-size: 30px;
   }
-  
-  @media only screen and (max-width: 800px) {
-    .projectList {
-      grid-template-columns: 1fr;
-    }
-    .project img {
-      width: 90%;
-    }
+  .project p {
+    font-size: 22px;
   }
-  
-  @media only screen and (max-width: 600px) {
-    .projectList {
-      width: 100%;
-    }
-    .projectItem {
-      width: 300px;
-      height: 300px;
-    }
-    .project img {
-      width: 500px;
-    }
-    .project h1,
-    .project h2 {
-      font-size: 35px;
-    }
-    .project p {
-      font-size: 32px;
-    }
+}
+
+@media only screen and (max-width: 400px) {
+  .project img {
+    width: 80%;
   }
-  
-  @media only screen and (max-width: 450px) {
-    .project img {
-      width: 85%;
-    }
-    .project h1,
-    .project h2 {
-      font-size: 30px;
-    }
-    .project p {
-      font-size: 22px;
-    }
+  .project h1,
+  .project h2 {
+    font-size: 30px;
   }
-  
-  
-  
-  
-  @media only screen and (max-width: 400px) {
-    .project img {
-      width: 80%;
-    }
-    .project h1,
-    .project h2 {
-      font-size: 30px;
-    }
-    .project p {
-      font-size: 22px;
-    }
+  .project p {
+    font-size: 22px;
   }
-  
-    @media only screen and (max-width: 300px) {
-      .project h1,
-      .project h2 {
-        font-size: 25px;
-      }
-      .project p {
-        font-size: 15px;
-      }
-    }
-  
-    @media only screen and (max-width: 200px) {
-      .project h1,
-      .project h2 {
-        font-size: 20px;
-      }
-      .project p {
-        font-size: 10px;
-      }
-    }
+}
+
+@media only screen and (max-width: 300px) {
+  .project h1,
+  .project h2 {
+    font-size: 25px;
+  }
+  .project p {
+    font-size: 15px;
+  }
+}
+
+@media only screen and (max-width: 200px) {
+  .project h1,
+  .project h2 {
+    font-size: 20px;
+  }
+  .project p {
+    font-size: 10px;
+  }
+}
