--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    border-top: 1px solid #cc8b65;
   }
   
   .socialMedia svg {
