--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -5,7 +5,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border-bottom: 1px solid #cc8b65;
   }
   
   .projectList {
@@ -31,6 +30,15 @@
     background-color: #cc8b65;
     color: #100c0d;
   }
+
+  .projectItem h1{
+    font-size: 24px;
+  }
+
+  .projectItem p{
+    font-size: 19px;
+  }
+
   .projectItem:hover {
     box-shadow: 0px 3px 15px #e3dcd2;
     transition: 0.3s ease-in;
@@ -45,10 +53,6 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-  }
-  
-  .projectItem h1 {
-    font-size: 25px;
   }
   
   @media only screen and (min-width: 1200px) {
