--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -31,3 +31,30 @@
     font-size: 18px;
     font-weight: bold;
   }
+
+  @media only screen and (max-width: 1200px) {
+
+  }
+
+
+
+
+  @media only screen and (max-width: 992px) {
+  }
+
+
+
+
+  @media only screen and (max-width: 768px) {
+  }
+
+
+
+  @media only screen and (max-width: 600px) {
+    .btn-links {
+      width: 100px;
+      height: 35px;
+    }
+  }
+
+
