--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -6,3 +6,38 @@
     font-style: italic;
     font-size: 16px;
 }
+
+
+
+@media only screen and (max-width: 1200px) {
+
+}
+
+
+
+
+@media only screen and (max-width: 992px) {
+    .vertical-timeline-element--education {
+        width: 95%;
+    }
+}
+
+
+
+
+@media only screen and (max-width: 768px) {
+  
+}
+
+
+
+@media only screen and (max-width: 600px) {
+
+}
+
+
+
+
+@media only screen and (min-width: 600px)  {
+
+}
