--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -24,8 +24,39 @@
   color: #cc8b65;
 }
 
+
+
+
+
+@media only screen and (max-width: 1200px) {
+
+}
+
+
+
+
+@media only screen and (max-width: 992px) {
+  
+}
+
+
+
+
+@media only screen and (max-width: 768px) {
+  
+}
+
+
+
 @media only screen and (max-width: 600px) {
   .socialMedia svg {
-    font-size: 35px;
+    font-size: 40px;
   }
+}
+
+
+
+
+@media only screen and (max-width: 600px)  {
+
 }
