--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -61,6 +61,10 @@
   width: 60%;
 }
 
+.me-skills .list {
+  width: 85%;
+}
+
 @media only screen and (max-width: 600px) {
   .home h2 {
     font-size: 40px;
@@ -78,3 +82,50 @@
     font-size: 17px;
   }
 }
+
+
+
+
+@media only screen and (max-width: 1200px) {
+
+}
+
+
+
+
+@media only screen and (max-width: 992px) {
+  
+}
+
+
+
+
+@media only screen and (max-width: 768px) {
+  .me-skills h1 { 
+    font-size: 60px;
+  }
+
+  .me-skills .item h2 { 
+    font-size: 30px;
+  }
+
+  .list p {
+    font-size: 22px;
+  }
+}
+
+
+
+@media only screen and (max-width: 600px) {
+  .me-skills h1 { 
+    font-size: 50px;
+  }
+
+  .me-skills .item h2 { 
+    font-size: 25px;
+  }
+  .list p {
+    font-size: 20px;
+  }
+}
+
