--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -64,20 +64,8 @@
   color: #3e497a;
 }
 
-@media only screen and (max-width: 1300px) {
-  .projectList {
-    grid-template-columns: 1fr 1fr;
-  }
-}
 
-@media only screen and (max-width: 800px) {
-  .projectList {
-    grid-template-columns: 1fr;
-  }
-  .project img {
-    width: 90%;
-  }
-}
+
 
 @media only screen and (max-width: 600px) {
   .projectList {
@@ -99,9 +87,51 @@
   }
 }
 
+
+
+
+
+
+@media only screen and (max-width: 1200px) {
+  .projectList {
+    grid-template-columns: 1fr 1fr;
+  }
+  .project-info .des,
+  .project-tools .des {
+    width: 80%;
+  } 
+
+  .project img {
+    width: 100%;
+  }
+}
+
+
+@media only screen and (max-width: 992px) {
+    .projectList {
+    grid-template-columns: 1fr;
+  }
+}
+
+
+
+
+@media only screen and (max-width: 768px) {
+  .project img {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .project-info .des,
+  .project-tools .des {
+    font-size: 18px ;
+  }
+}
+
 @media only screen and (max-width: 450px) {
   .project img {
-    width: 85%;
+    height: 250px;
   }
   .project h1,
   .project h2 {
@@ -113,9 +143,6 @@
 }
 
 @media only screen and (max-width: 400px) {
-  .project img {
-    width: 80%;
-  }
   .project h1,
   .project h2 {
     font-size: 30px;
@@ -128,19 +155,10 @@
 @media only screen and (max-width: 300px) {
   .project h1,
   .project h2 {
-    font-size: 25px;
-  }
-  .project p {
-    font-size: 15px;
-  }
-}
-
-@media only screen and (max-width: 200px) {
-  .project h1,
-  .project h2 {
     font-size: 20px;
   }
-  .project p {
-    font-size: 10px;
+  .project-info .des,
+  .project-tools .des {
+    font-size: 17px ;
   }
 }
