--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,43 +1,15 @@
-.vertical-timeline-element--education h3{
-    font-size: 22px;
+.vertical-timeline-element--education h3 {
+  font-size: 22px;
 }
 
 .vertical-timeline-element--education p {
-    font-style: italic;
-    font-size: 16px;
+  font-style: italic;
+  font-size: 16px;
 }
 
-
-
-@media only screen and (max-width: 1200px) {
-
-}
-
-
-
-
+/** Media query **/
 @media only screen and (max-width: 992px) {
-    .vertical-timeline-element--education {
-        width: 95%;
-    }
-}
-
-
-
-
-@media only screen and (max-width: 768px) {
-  
-}
-
-
-
-@media only screen and (max-width: 600px) {
-
-}
-
-
-
-
-@media only screen and (min-width: 600px)  {
-
+  .vertical-timeline-element--education {
+    width: 95%;
+  }
 }
