--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -58,10 +58,12 @@
   text-align: center;
 }
 
+/** Media query **/
 @media only screen and (max-width: 600px) {
   .toggleButton {
     display: flex;
   }
+
   #close a {
     display: none;
   }
